--- a/app/src/main/res/layout/activity_social_detail.xml
+++ b/app/src/main/res/layout/activity_social_detail.xml
@@ -15,7 +15,6 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.LinearLayoutCompat
-            android:id="@+id/ll_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -29,117 +28,117 @@
                 android:padding="16dp"
                 android:textColor="@color/color_red"
                 android:visibility="gone" />
-            
-            <LinearLayout style="@style/HorizontalLinearLayout">
 
-                <TextView
-                    style="@style/HintText"
-                    android:text="名称" />
-
-                <AutoCompleteTextView
-                    android:id="@+id/et_name"
-                    style="@style/CollectEditText" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/HorizontalLinearLayout">
-
-                <TextView
-                    style="@style/HintText"
-                    android:text="地址" />
-
-                <AutoCompleteTextView
-                    android:id="@+id/et_address"
-                    style="@style/CollectEditText" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/HorizontalLinearLayout">
-
-                <TextView
-                    style="@style/HintText"
-                    android:text="分类" />
-
-                <Spinner
-                    android:id="@+id/sp_fl"
-                    style="@style/CustomSpinner" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/HorizontalLinearLayout">
-
-                <TextView
-                    style="@style/HintText"
-                    android:text="物业信息" />
-
-                <com.mapuni.gdydcaiji.view.ClearEditText
-                    android:id="@+id/et_wyxx"
-                    style="@style/CollectEditText" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/HorizontalLinearLayout">
-
-                <TextView
-                    style="@style/HintText"
-                    android:text="联系电话" />
-
-                <com.mapuni.gdydcaiji.view.ClearEditText
-                    android:id="@+id/et_lxdh"
-                    style="@style/CollectEditText"
-                    android:inputType="phone" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/HorizontalLinearLayout">
-
-                <TextView
-                    style="@style/HintText"
-                    android:text="楼栋数" />
-
-                <com.mapuni.gdydcaiji.view.ClearEditText
-                    android:id="@+id/et_lds"
-                    style="@style/CollectEditText"
-                    android:inputType="number" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/HorizontalLinearLayout">
-
-                <TextView
-                    style="@style/HintText"
-                    android:text="备注" />
-
-                <com.mapuni.gdydcaiji.view.ClearEditText
-                    android:id="@+id/et_bz"
-                    style="@style/CollectEditText"
-                    android:inputType="number" />
-
-            </LinearLayout>
-            
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent">
 
-                <TextView
-                    style="@style/HintText"
-                    android:text="图片" />
+                <android.support.v7.widget.LinearLayoutCompat
+                    android:id="@+id/ll_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    app:divider="@drawable/shape_divider"
+                    app:showDividers="middle">
 
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="96dp"
-                    android:layout_weight="7">
+                    <LinearLayout style="@style/HorizontalLinearLayout">
 
-                    <ImageView
-                        android:id="@+id/iv_image"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/selector_camera" />
-                </RelativeLayout>
+                        <TextView
+                            style="@style/HintText"
+                            android:text="名称" />
 
-            </LinearLayout>
+                        <AutoCompleteTextView
+                            android:id="@+id/et_name"
+                            style="@style/CollectEditText" />
+
+                    </LinearLayout>
+
+                    <LinearLayout style="@style/HorizontalLinearLayout">
+
+                        <TextView
+                            style="@style/HintText"
+                            android:text="地址" />
+
+                        <AutoCompleteTextView
+                            android:id="@+id/et_address"
+                            style="@style/CollectEditText" />
+
+                    </LinearLayout>
+
+                    <LinearLayout style="@style/HorizontalLinearLayout">
+
+                        <TextView
+                            style="@style/HintText"
+                            android:text="分类" />
+
+                        <Spinner
+                            android:id="@+id/sp_fl"
+                            style="@style/CustomSpinner" />
+
+                    </LinearLayout>
+
+                    <LinearLayout style="@style/HorizontalLinearLayout">
+
+                        <TextView
+                            style="@style/HintText"
+                            android:text="物业信息" />
+
+                        <com.mapuni.gdydcaiji.view.ClearEditText
+                            android:id="@+id/et_wyxx"
+                            style="@style/CollectEditText" />
+
+                    </LinearLayout>
+
+                    <LinearLayout style="@style/HorizontalLinearLayout">
+
+                        <TextView
+                            style="@style/HintText"
+                            android:text="联系电话" />
+
+                        <com.mapuni.gdydcaiji.view.ClearEditText
+                            android:id="@+id/et_lxdh"
+                            style="@style/CollectEditText"
+                            android:inputType="phone" />
+
+                    </LinearLayout>
+
+                    <LinearLayout style="@style/HorizontalLinearLayout">
+
+                        <TextView
+                            style="@style/HintText"
+                            android:text="楼栋数" />
+
+                        <com.mapuni.gdydcaiji.view.ClearEditText
+                            android:id="@+id/et_lds"
+                            style="@style/CollectEditText"
+                            android:inputType="number" />
+
+                    </LinearLayout>
+
+                    <LinearLayout style="@style/HorizontalLinearLayout">
+
+                        <TextView
+                            style="@style/HintText"
+                            android:text="备注" />
+
+                        <com.mapuni.gdydcaiji.view.ClearEditText
+                            android:id="@+id/et_bz"
+                            style="@style/CollectEditText"
+                            android:inputType="number" />
+
+                    </LinearLayout>
+
+                    <include layout="@layout/layout_photo" />
+                </android.support.v7.widget.LinearLayoutCompat>
+
+                <View
+                    android:id="@+id/cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:clickable="true"
+                    android:visibility="gone" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/ll_zj"
@@ -156,7 +155,7 @@
                     android:singleLine="false" />
 
             </LinearLayout>
-            
+
             <Button
                 android:id="@+id/btn_save"
                 style="?android:attr/borderlessButtonStyle"
