--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -30,11 +30,42 @@
             android:layout_marginTop="10dp"
 
             />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:background="#787777"
+            >
+            <TextView
+                android:id="@+id/update_data"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="上传数据"
+                android:gravity="center"
+                android:background="#fff"
+                android:layout_margin="1px"
+                />
+            <TextView
+                android:id="@+id/download_data"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="下载数据"
+                android:gravity="center"
+                android:background="#fff"
+                android:layout_margin="1px"
+                />
+
+        </LinearLayout>
     </RelativeLayout>
     <LinearLayout
-        android:layout_width="80dp"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_gravity="right"
+        android:background="@color/white"
         >
         <TextView
             android:layout_width="match_parent"
