--- a/app/src/main/res/layout/activity_poi_detail.xml
+++ b/app/src/main/res/layout/activity_poi_detail.xml
@@ -47,9 +47,57 @@
                             style="@style/HintText"
                             android:text="楼宇类型" />
 
-                        <Spinner
-                            android:id="@+id/sp_lyType"
-                            style="@style/CustomSpinner" />
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="7"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/tv_type0"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/poi_tv_bg_normal"
+                                android:gravity="center"
+                                android:textColor="@color/black_text" />
+
+                            <TextView
+                                android:id="@+id/tv_type1"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/poi_tv_bg_normal"
+                                android:gravity="center"
+                                android:textColor="@color/black_text" />
+
+                            <TextView
+                                android:id="@+id/tv_type2"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/poi_tv_bg_normal"
+                                android:gravity="center"
+                                android:textColor="@color/black_text" />
+
+                            <TextView
+                                android:id="@+id/tv_type3"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/poi_tv_bg_normal"
+                                android:gravity="center"
+                                android:textColor="@color/black_text" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -59,9 +107,45 @@
                             style="@style/HintText"
                             android:text="楼宇性质" />
 
-                        <Spinner
-                            android:id="@+id/sp_lyxz"
-                            style="@style/CustomSpinner" />
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="7"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/tv_xz0"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/poi_tv_bg_normal"
+                                android:gravity="center"
+                                android:textColor="@color/black_text" />
+
+                            <TextView
+                                android:id="@+id/tv_xz1"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/poi_tv_bg_normal"
+                                android:gravity="center"
+                                android:textColor="@color/black_text" />
+
+                            <TextView
+                                android:id="@+id/tv_xz2"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/poi_tv_bg_normal"
+                                android:gravity="center"
+                                android:textColor="@color/black_text" />
+                        </LinearLayout>
 
                     </LinearLayout>
 
