--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,6 @@
     <color name="color_red">#ff0000</color>
     <color name="common_bg">#efeff4</color>
     <color name="light_gray_text">#999999</color>
+    <color name="poi_tv_normal">#dddddd</color>
 
 </resources>
