--- a/app/src/main/res/layout/dialog_bz.xml
+++ b/app/src/main/res/layout/dialog_bz.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="标注设置"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        />
+        android:text="标注设置" />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#0e0e0e"
-        />
+        android:background="#0e0e0e" />
+
     <Spinner
         android:id="@+id/spinener_bz_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></Spinner>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#0e0e0e"
-        />
+        android:background="#0e0e0e" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_dialog_bz"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        >
-    </android.support.v7.widget.RecyclerView>
+        android:layout_weight="1"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
