--- a/app/src/main/res/layout/activity_social_detail.xml
+++ b/app/src/main/res/layout/activity_social_detail.xml
@@ -124,7 +124,7 @@
                         <com.mapuni.gdydcaiji.view.ClearEditText
                             android:id="@+id/et_bz"
                             style="@style/CollectEditText"
-                            android:inputType="number" />
+                            android:singleLine="false"/>
 
                     </LinearLayout>
 
