--- a/app/src/main/res/layout/activity_line_detail.xml
+++ b/app/src/main/res/layout/activity_line_detail.xml
@@ -86,7 +86,7 @@
                         <com.mapuni.gdydcaiji.view.ClearEditText
                             android:id="@+id/et_bz"
                             style="@style/CollectEditText"
-                            android:inputType="number" />
+                            android:singleLine="false" />
 
                     </LinearLayout>
 
