内存泄漏优化

--- a/app/src/main/res/layout/activity_poi_detail.xml
+++ b/app/src/main/res/layout/activity_poi_detail.xml
@@ -233,8 +233,7 @@
 
                         <com.mapuni.gdydcaiji.view.ClearEditText
                             android:id="@+id/et_lycs"
-                            style="@style/CollectEditText" 
-                            android:inputType="number"/>
+                            style="@style/CollectEditText"/>
 
                     </LinearLayout>
 
