--- a/app/src/main/res/layout/dialog_showgraphicinfo.xml
+++ b/app/src/main/res/layout/dialog_showgraphicinfo.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="附近要素的名称"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"/>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#0e0e0e"
-        />
+        android:background="#0e0e0e" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_dialog"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        >
-    </android.support.v7.widget.RecyclerView>
+        android:layout_weight="1"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
