--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    android:id="@+id/main"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mapuni.gdydcaiji.activity.CollectionActivity">
@@ -13,117 +12,119 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.esri.android.map.MapView>
 
+    <include
+        android:id="@+id/lay_title"
+        layout="@layout/layout_title" />
 
     <LinearLayout
         android:id="@+id/linear_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="5dp"
         android:background="#00ffffff"
-        >
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lay_title">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#00ffffff"
-            ></LinearLayout>
+            android:background="#00ffffff"></LinearLayout>
+
         <ImageView
             android:id="@+id/poi_collect"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="0.4"
-           android:layout_height="wrap_content"
-            android:src="@drawable/selector_poi"
             android:background="@drawable/topraduis_selector"
             android:padding="10dp"
             android:scaleType="fitCenter"
-             />
+            android:src="@drawable/selector_poi" />
+
         <ImageView
             android:layout_width="1px"
             android:layout_height="match_parent"
-            android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
+            android:layout_marginTop="7dp"
             android:background="@color/gray"
 
             />
+
         <ImageView
             android:id="@+id/line_collect"
             android:layout_width="0dp"
-            android:layout_weight="0.4"
             android:layout_height="wrap_content"
-            android:src="@drawable/selector_xian"
+            android:layout_weight="0.4"
             android:background="@drawable/btn_back_selector"
-
             android:padding="10dp"
-            android:scaleType="fitCenter"/>
+
+            android:scaleType="fitCenter"
+            android:src="@drawable/selector_xian" />
+
         <ImageView
             android:layout_width="1px"
             android:layout_height="match_parent"
-            android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
+            android:layout_marginTop="7dp"
             android:background="@color/gray"
 
             />
+
         <ImageView
             android:id="@+id/newploygon_collect"
             android:layout_width="0dp"
-            android:layout_weight="0.4"
             android:layout_height="wrap_content"
-            android:src="@drawable/selector_mian"
+            android:layout_weight="0.4"
             android:background="@drawable/btn_back_selector"
-
             android:padding="10dp"
-            android:scaleType="fitCenter" />
+
+            android:scaleType="fitCenter"
+            android:src="@drawable/selector_mian" />
 
         <ImageView
             android:layout_width="1px"
             android:layout_height="match_parent"
-            android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
-            android:background="@color/gray"
-            />
+            android:layout_marginTop="7dp"
+            android:background="@color/gray" />
+
         <ImageView
             android:id="@+id/selectpoint_collect"
             android:layout_width="0dp"
-            android:layout_weight="0.4"
             android:layout_height="wrap_content"
-            android:src="@drawable/selector_fanwei"
+            android:layout_weight="0.4"
             android:background="@drawable/bottomraduis_selector"
             android:padding="10dp"
             android:scaleType="fitCenter"
-            />
+            android:src="@drawable/selector_fanwei" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#00ffffff"
-            ></LinearLayout>
+            android:background="#00ffffff"></LinearLayout>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_compass"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:src="@drawable/ic_compass"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="60dp"
-        />
+        android:src="@drawable/ic_compass"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
         android:id="@+id/dingwei_collect"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginLeft="14dp"
-        android:src="@drawable/dingwei_icon_selector"
-        app:layout_constraintTop_toBottomOf="@+id/linear_reduce"
         android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:src="@drawable/dingwei_icon_selector"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linear_reduce" />
 
     <ImageView
         android:layout_width="30dp"
@@ -151,9 +152,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="14dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/iv_amplify"
@@ -170,19 +171,17 @@
     </LinearLayout>
 
 
-
     <ImageView
         android:id="@+id/btn_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
         android:layout_marginRight="10dp"
-        android:src="@drawable/selector_caidan"
-        android:padding="10dp"
         android:background="@color/white"
-        app:layout_constraintRight_toRightOf="parent"
+        android:padding="10dp"
+        android:src="@drawable/selector_caidan"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <com.xw.repo.BubbleSeekBar
         android:id="@+id/seek_collect"
@@ -191,18 +190,17 @@
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/linear_button"
+        app:bsb_bubble_text_color="@color/colorPrimaryDark"
         app:bsb_max="200"
         app:bsb_min="10"
         app:bsb_progress="10"
+        app:bsb_second_track_color="#ff0000"
         app:bsb_section_count="5"
         app:bsb_section_text_position="bottom_sides"
         app:bsb_show_progress_in_float="true"
         app:bsb_show_section_mark="true"
         app:bsb_show_section_text="true"
         app:bsb_show_thumb_text="true"
-        app:bsb_bubble_text_color="@color/colorPrimaryDark"
-        app:bsb_second_track_color="#ff0000"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/linear_button" />
 
 </android.support.constraint.ConstraintLayout>
