--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/bg">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bg">
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/logo"
         android:layout_marginTop="100dp"
-        />
+        android:src="@drawable/logo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo"
+        android:layout_centerHorizontal="true"
+        android:text="@string/version_name"
+        android:textColor="@color/white" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_below="@+id/logo"
         android:layout_marginTop="38dp"
-        >
+        android:orientation="vertical">
 
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:background="@drawable/bg_shurukuang"
             android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:layout_marginRight="14dp"
-            android:layout_marginLeft="14dp"
-            >
+            android:focusableInTouchMode="true">
 
             <ImageView
                 android:id="@+id/iv_username"
@@ -38,7 +43,7 @@
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="32dp"
-                android:src="@drawable/yonghuming"/>
+                android:src="@drawable/yonghuming" />
 
             <EditText
                 android:id="@+id/et_username"
@@ -48,21 +53,19 @@
                 android:background="@null"
                 android:gravity="center"
                 android:hint="请输入用户名"
-                android:textColorHint="@color/hintTextColor"/>
+                android:textColorHint="@color/hintTextColor" />
 
 
         </RelativeLayout>
 
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@drawable/bg_shurukuang"
-            android:layout_marginRight="14dp"
             android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:layout_marginTop="20dp"
-            >
+            android:background="@drawable/bg_shurukuang">
 
             <ImageView
 
@@ -71,7 +74,7 @@
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="32dp"
-                android:src="@drawable/mima"/>
+                android:src="@drawable/mima" />
 
             <EditText
                 android:id="@+id/et_password"
@@ -82,7 +85,7 @@
                 android:gravity="center"
                 android:hint="请输入密码"
                 android:inputType="textPassword"
-                android:textColorHint="@color/hintTextColor"/>
+                android:textColorHint="@color/hintTextColor" />
 
         </RelativeLayout>
 
@@ -95,7 +98,7 @@
             android:layout_margin="8dp"
             android:layout_marginLeft="16dp"
             android:text="记住密码"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
 
 
         <Button
@@ -107,7 +110,7 @@
             android:background="@drawable/bg_login"
             android:text="登 录"
             android:textColor="@color/white"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
     </LinearLayout>
 
 </RelativeLayout>
