修复内业处理bug，上传内业数据加上所属区域

--- a/app/src/main/res/layout/activity_line_detail.xml
+++ b/app/src/main/res/layout/activity_line_detail.xml
@@ -77,6 +77,22 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/ll_ssqy"
+                        style="@style/HorizontalLinearLayout"
+                        android:visibility="gone">
+
+                        <TextView
+                            style="@style/HintText"
+                            android:text="所属区域" />
+
+                        <AutoCompleteTextView
+                            android:id="@+id/et_ssqy"
+                            style="@style/CollectEditText"
+                            android:singleLine="false" />
+
+                    </LinearLayout>
+                    
                     <LinearLayout style="@style/HorizontalLinearLayout">
 
                         <TextView
