上传界面不息屏

--- a/app/src/main/res/layout/activity_uploaddata.xml
+++ b/app/src/main/res/layout/activity_uploaddata.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:divider="@drawable/shape_divider"
-    app:showDividers="middle">
+    app:showDividers="middle"
+    android:keepScreenOn="true"
+    >
 
     <include layout="@layout/layout_title" />
 
